objects/geopointe__Route__c.object
<CustomObject>
    <description>Instances of a Route used by the Geopointe application.  Routes can be saved or just held here temporarily.  The temporary ones will be periodically cleaned up.</description>
    <fields>
        <fullName>geopointe__Avoid_Highways__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Google Only</inlineHelpText>
        <label>Avoid Highways</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Avoid_Tolls__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MapQuest Only</inlineHelpText>
        <label>Avoid Tolls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Route__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this route was generated from the calendar. This field is maintained systematically and should not be manually changed.</inlineHelpText>
        <label>Calendar Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Date__c</fullName>
        <inlineHelpText>The date this route is scheduled for.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Draggable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Draggable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Locations_1__c</fullName>
        <label>Locations 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Locations_2__c</fullName>
        <label>Locations 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Locations_3__c</fullName>
        <label>Locations 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Mapping_Provider__c</fullName>
        <label>Mapping Provider</label>
        <picklist>
            <picklistValues>
                <fullName>MapQuest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Number_of_Stops__c</fullName>
        <inlineHelpText>Includes start and end</inlineHelpText>
        <label>Number of Stops</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Optimized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Type__c</fullName>
        <label>Route Type</label>
        <picklist>
            <picklistValues>
                <fullName>fastest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>shortest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pedestrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>multimodal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bicycle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Temporary__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates that this is used by the system as a temporary record. It is not intended to be saved long-term. The system will periodically clean these records up.</inlineHelpText>
        <label>Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Thumb_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MapQuest only</inlineHelpText>
        <label>Thumb Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Distance_km__c</fullName>
        <label>Total Distance (km)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Distance_mi__c</fullName>
        <label>Total Distance (mi)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Time__c</fullName>
        <label>Total Time (min)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Units__c</fullName>
        <label>Units</label>
        <picklist>
            <picklistValues>
                <fullName>m</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>k</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>geopointe__My_Routes</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Temporary__c</columns>
        <columns>geopointe__Mapping_Provider__c</columns>
        <columns>geopointe__Route_Type__c</columns>
        <columns>geopointe__Avoid_Highways__c</columns>
        <columns>geopointe__Avoid_Tolls__c</columns>
        <columns>geopointe__Thumb_Maps__c</columns>
        <columns>geopointe__Units__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>geopointe__Locations_1__c</columns>
        <columns>geopointe__Locations_2__c</columns>
        <columns>geopointe__Locations_3__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Routes</label>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>